--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,9 +20,15 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+    
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: ServerClipboard_API_Solution
+    
     - name: Build
       run: dotnet build --no-restore
+      working-directory: ServerClipboard_API_Solution
+
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: ServerClipboard_API_Solution
