--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -9,9 +9,26 @@ on:
   pull_request:
     branches: [ "master" ]
 
-jobs:
-  build:
+env:
+  PROJECT_PATH: "/home/runner/work/ServerClipboard/ServerClipboard"
+  DEPLOY_PATH: "/home/runner/work/ServerClipboard/ServerClipboard/Deploy"
 
+jobs:
+ 
+  environment:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Print current clone project working directory 
+        run: |
+          pwd
+          ls -la
+
+  build:
+    needs: environment
     runs-on: ubuntu-latest
 
     steps:
@@ -22,7 +39,7 @@ jobs:
         dotnet-version: 8.0.x
     
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ${{ env.PROJECT_PATH }}
       working-directory: ServerClipboard_API_Solution
     
     - name: Build
