--- a/ServerClipboard_API.Test/ServerClipboard_API.Test.csproj
+++ b/ServerClipboard_API.Test/ServerClipboard_API.Test.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Serverclipboard_API\ServerClipboard_API.csproj" />
+    <ProjectReference Include="..\ServerClipboard_API\ServerClipboard_API.csproj" />
   </ItemGroup>
 
   <ItemGroup>
