--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,6 +1,3 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
 name: .NET
 
 on:
@@ -14,7 +11,6 @@ env:
   DEPLOY_PATH: "/home/runner/work/ServerClipboard_API_Solution/ServerClipboard_API_Solution"
 
 jobs:
-
   environment:
     runs-on: ubuntu-latest
 
@@ -33,19 +29,31 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup .NET
+    
+    - name: 01- Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
     
-    - name: Restore dependencies
+    - name: 02- Restore dependencies
       run: dotnet restore ${{ env.PROJECT_PATH }}
       working-directory: ${{ env.PROJECT_PATH }}
     
-    - name: Build
+    - name: 03- Build
       run: dotnet build --no-restore
       working-directory: ${{ env.PROJECT_PATH }}
 
-    - name: Test
+    - name: 04- Test
       run: dotnet test --no-build --verbosity normal
       working-directory: ${{ env.PROJECT_PATH }}
+    
+    - name: 05- SPackage Artifacts
+      run: |
+        mkdir -p ${{ env.DEPLOY_PATH }}/artifacts
+        cp -r ${{ env.PROJECT_PATH }}/bin/Release/* ${{ env.DEPLOY_PATH }}/artifacts/
+    
+    - name: 06- SUpload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-artifacts
+        path: ${{ env.DEPLOY_PATH }}/artifacts
