--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,6 +53,17 @@ jobs:
       run: dotnet test --no-build --verbosity normal
       working-directory: ${{ github.workspace }}
     
+    
+    - name: Publish
+      run: dotnet publish /ServerClipBoard_API/ServerClipBoard_API.csproj -c Release -o release — nologo
+    
+    
+    
+    
+    
+    
+    
+    
     - name: Package Artifacts
       run: |
         
