--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,20 +16,18 @@ jobs:
 
       - name: Print current clone project working directory 
         run: |
-         
           echo "----------------------------------------------------------------"
           echo Git Workspace: ${{ github.workspace }}
           echo "----------------------------------------------------------------"
-
           pwd
           ls -la
-  
+
   build:
     runs-on: ubuntu-latest
 
     env:
       SOLUTION_PATH: ${{ github.workspace }}/ServerClipBoard_API_Solution
-      BUILD_PATH: ${{ github.workspace }}/ServerClipBoard_API/bin/Debug/net8.0
+      PROJECT_PATH: ${{ github.workspace }}/ServerClipBoard_API
       ARTIFACT_PATH: ${{ github.workspace }}/ServerClipBoard_API/Artifact
 
     steps:
@@ -42,36 +40,29 @@ jobs:
         dotnet-version: '8.0.x'
     
     - name: Restore dependencies
-      run: dotnet restore
-      working-directory: ${{ github.workspace }}
+      run: dotnet restore ${{ env.PROJECT_PATH }}/ServerClipBoard_API.csproj
     
     - name: Build
-      run: dotnet build --no-restore --configuration Debug
-      working-directory: ${{ github.workspace }}
+      run: dotnet build --no-restore --configuration Debug ${{ env.PROJECT_PATH }}/ServerClipBoard_API.csproj
     
     - name: Test
-      run: dotnet test --no-build --verbosity normal
-      working-directory: ${{ github.workspace }}
-    
+      run: dotnet test --no-build --verbosity normal ${{ env.PROJECT_PATH }}/ServerClipBoard_API.csproj
     
     - name: Publish
-      run: dotnet publish /ServerClipBoard_API/ServerClipBoard_API.csproj -c Release -o release
-
+      run: dotnet publish ${{ env.PROJECT_PATH }}/ServerClipBoard_API.csproj -c Release -o ${{ env.ARTIFACT_PATH }}/release
     
     - name: Package Artifacts
       run: |
-        
         echo "------------------------------------------------------"
         echo "Verifying build archives"
         echo "------------------------------------------------------"
-        #ls -la ${{ env.BUILD_PATH }}
-        ls -la ${{ env.SOLUTION_PATH }}/ServerClipboard_API/bin/Debug/net8.0
+        ls -la ${{ env.ARTIFACT_PATH }}/release
         echo "------------------------------------------------------"
         
         echo "Creating temporary Artifact path"
         mkdir -p ${{ env.ARTIFACT_PATH }}
         
-        cp -r ${{ env.BUILD_PATH }}/* ${{ env.ARTIFACT_PATH }}/
+        cp -r ${{ env.ARTIFACT_PATH }}/release/* ${{ env.ARTIFACT_PATH }}/
     
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
