--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,7 +52,7 @@ jobs:
       working-directory: ${{ github.workspace }}
     
     - name: Publish
-      run: dotnet publish ${{ env.PROJECT_PATH }}/ServerClipBoard_API.csproj -c Release --nologo
+      run: dotnet publish ${{ env.SOLUTION_PATH }}/ServerClipBoard_API.csproj -c Release
     
     - name: Package Artifacts
       run: |
