--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      SOLUTION_PATH: ${{ github.workspace }}/ServerClipboard_API_Solution
+      SOLUTION_PATH: ${{ github.workspace }}
       PROJECT_PATH: ${{ github.workspace }}/ServerClipboard_API_Solution/ServerClipboard_API
       BUILD_PATH: ${{ github.workspace }}/ServerClipboard_API/bin/Debug/net8.0
       PUBLISH_PATH: ${{ github.workspace }}/ServerClipboard_API/bin/Debug/net8.0/Publish
