--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
 
     env:
       SOLUTION_PATH: ${{ github.workspace }}
-      PROJECT_PATH: ${{ github.workspace }}/ServerClipboard_API_Solution/ServerClipboard_API
+      PROJECT_PATH: ${{ github.workspace }}/ServerClipboard_API
       BUILD_PATH: ${{ github.workspace }}/ServerClipboard_API/bin/Debug/net8.0
       PUBLISH_PATH: ${{ github.workspace }}/ServerClipboard_API/bin/Debug/net8.0/Publish
       ARTIFACT_PATH: ${{ github.workspace }}/ServerClipboard_API/Artifact
