--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Print current clone project working directory 
         run: |
-         
+          echo
           echo "----------------------------------------------------------------"
           echo Git Workspace: ${{ github.workspace }}
           echo "----------------------------------------------------------------"
@@ -29,7 +29,7 @@ jobs:
       SOLUTION_PATH: ${{ github.workspace }}
       PROJECT_PATH: ${{ github.workspace }}/ServerClipboard_API
       BUILD_PATH: ${{ github.workspace }}/ServerClipboard_API/bin/Debug/net8.0
-      PUBLISH_PATH: ${{ github.workspace }}/ServerClipboard_API/bin/Debug/net8.0/Publish
+      PUBLISH_PATH: ${{ github.workspace }}/ServerClipboard_API/bin/Debug/net8.0/publish
       ARTIFACT_PATH: ${{ github.workspace }}/ServerClipboard_API/Artifact
 
     steps:
@@ -56,6 +56,7 @@ jobs:
     - name: Publish
       run: |
          ls -la 
+         echo
          echo "----------------------------------------------"
          ls -la ${{ env.PROJECT_PATH }}
          
@@ -63,11 +64,10 @@ jobs:
     
     - name: Package Artifacts
       run: |
-        
+        echo
         echo "------------------------------------------------------"
         echo "Verifying build archives"
         echo "------------------------------------------------------"
-        #ls -la ${{ env.BUILD_PATH }}
          ls -la ${{ env.PUBLISH_PATH }}
         echo "------------------------------------------------------"
         
